--- a/client/src/css/colorMenu.css
+++ b/client/src/css/colorMenu.css
@@ -6,26 +6,6 @@
     align-items: center;
     background-color: black;
 }
-.color-menu-saturation {
-    width: 100%;
-    height: 120px;
-    display: flex;
-    justify-content: center;
-    position: relative;
-    background-color: black;
-    border: 2px solid rgb(50,50,50);
-}
-.color-menu-hue {
-    width: 100%;
-    height: 10px;
-    display: flex;
-    justify-content: center;
-    position: relative;
-    background-color: black;
-    z-index: 2;
-    border: 2px solid rgb(50,50,50);
-    height: 15px;
-}
 
 .color-menu-option-wrap {
     display: flex;
@@ -57,27 +37,17 @@
 }
 
 
-.color-menu-alpha {
-    width: 100%;
-    height: 10px;
-    display: flex;
-    justify-content: center;
-    position: relative;
-    background-color: white;
-    z-index: 2;
-    border: 2px solid rgb(50,50,50);
-    height: 15px;
-}
+
 
 .color-menu-color-palette-display {
     /* width: 100%; */
-    margin: 20px 0 20px 0;
-    height: 50px;
+    margin-bottom: 20px;
+    min-height: 50px;
     width: 200px;
-    border-radius: 2px;
+    /* border-radius: 2px; */
     background-color: rgb(80,80,80);
-    border: 2px solid rgb(20,20,20);
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
 }
@@ -87,15 +57,5 @@
     border-radius: 2px;
     margin: 3px;
     background-color: rgb(120,130,200);
-    border: 2px solid rgb(20,20,20);
     cursor: pointer;
-}
-.color-menu-palette-icon {
-    color: white;
-    cursor: pointer;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
