--- a/client/src/css/canvas.css
+++ b/client/src/css/canvas.css
@@ -1,17 +1,26 @@
 .canvas-wrap {
     display: flex;
-    width: 100vw;
+    width: 100%;
     overflow: hidden;
-    height: 100vh;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
     background-color: rgb(200,200,200);
 }
 
 .canvas-display {
     display: flex;
     width: 100%;
-    flex-direction: column;
-    align-items: center;
     justify-content: space-between;
+    background-color: rgb(200,200,200);
+}
+
+.canvas-display-inner {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
     background-color: rgb(200,200,200);
 }
 
