--- a/client/src/css/paletteMenu.css
+++ b/client/src/css/paletteMenu.css
@@ -2,7 +2,7 @@
     width: 200px;
     height: 150px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     background-color: rgb(80,80,80);
     margin-bottom: 20px;
