--- a/client/src/css/topPanel.css
+++ b/client/src/css/topPanel.css
@@ -1,11 +1,25 @@
-.side-panel {
-    width: 50px;
-    height: 100%;
+.top-panel {
+    height: 50px;
+    width: 100%;
     background-color:#212529;
     display: flex;
-    flex-direction: column; 
+    justify-content: space-between;
     align-items: center;
     z-index: 2;
+}
+
+.top-panel-left {
+    display: flex;
+}
+.top-panel-right {
+    display: flex;
+}
+
+.top-panel-logo {
+    color: white;
+    height: 50px;
+    width: 80px;
+    border: 1px solid white;
 }
 
 .panel-button {
@@ -53,51 +67,3 @@
     font-size: 15px;
 }
 
-.side-panel-menu {
-    position: absolute;
-    height: 100%;
-    top: 0;
-    background-color:#212529;
-    display: flex;
-    padding: 30px;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.side-panel-content {
-    /* width: 200px; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-}
-
-.side-panel-title {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    color: rgb(200,200,200);
-}
-
-
-.side-panel-menu-wrap {
-    width: 250px;
-    position: absolute;
-    height: 100%;
-    background-color:#212529;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-.side-panel-icon {
-    position: absolute; 
-    right: 0; 
-    top: 0;
-
-}
-
-.canvas {
-    border: 3px solid black
-}
