--- a/client/src/css/sizeMenu.css
+++ b/client/src/css/sizeMenu.css
@@ -5,5 +5,5 @@
     justify-content: center;
     align-items: center;
     background-color: rgb(200,200,200);
-    margin-bottom: 20px;
+    margin: 10px 0;
 }
