--- a/client/src/css/topPanel.css
+++ b/client/src/css/topPanel.css
@@ -10,16 +10,47 @@
 
 .top-panel-left {
     display: flex;
+    margin-left: 50px;
 }
 .top-panel-right {
     display: flex;
+    margin-right: 50px;
 }
 
 .top-panel-logo {
     color: white;
     height: 50px;
-    width: 80px;
-    border: 1px solid white;
+    width: 50px;
+}
+
+
+.top-panel-menu-top {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+}
+
+.top-panel-menu-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+    width: 100%;
+}
+
+.top-menu-label {
+    font-size: 16px;
+}
+
+.top-panel-menu {
+    position: absolute;
+    top: 100%;
+    left:0;
+    background-color:#212529;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .panel-button {
@@ -36,7 +67,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size:20px;
 }
 .panel-button-active {
     border-radius: 3px;
@@ -51,7 +81,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size:22px;
 }
 
 .panel-tooltip {
