--- a/client/src/css/topPanel.css
+++ b/client/src/css/topPanel.css
@@ -11,6 +11,7 @@
 .top-panel-left {
     display: flex;
     margin-left: 50px;
+    position: relative;
 }
 .top-panel-right {
     display: flex;
@@ -40,6 +41,11 @@
 
 .top-menu-label {
     font-size: 16px;
+    color: rgb(200,200,200);
+}
+
+.top-menu-title {
+    color: rgb(200,200,200);
 }
 
 .top-panel-menu {
@@ -53,46 +59,5 @@
     align-items: center;
 }
 
-.panel-button {
-    border-radius: 3px;
-    background-color: #212529;
-    /* margin-top: 5px; */
-    width: 50px;
-    height: 50px;
-    /* border: 1px solid white; */
-    position: relative;
-    text-decoration: none;
-    cursor: pointer;
-    color: rgb(200,200,200);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.panel-button-active {
-    border-radius: 3px;
-    background-color: rgb(20,20,30);
-    /* margin-top: 5px; */
-    width: 50px;
-    height: 50px;
-    position: relative;
-    color: white;
-    text-decoration: none;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-.panel-tooltip {
-    position: absolute;
-    left: 100%;
-    width: 200px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(220,230,240);
-    color: black;
-    font-size: 15px;
-}
 
