--- a/client/src/css/shapeMenu.css
+++ b/client/src/css/shapeMenu.css
@@ -37,3 +37,40 @@
     border-radius: 50%;
     cursor: pointer;
 }
+
+.shape-menu-size {
+    height: 100px;
+    width: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+
+.shape-menu-size-row {
+    height: 50px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.shape-menu-size-input {
+    color:rgb(33, 37, 41);
+    background-color: white;
+    border: none;
+    padding: 7px 15px;
+    display: flex;
+    width: 60px;
+    margin: 0 10px
+}
+.shape-menu-size-input-wrap {
+    display: flex;
+    align-items: center;
+}
+.shape-menu-size-icon {
+    color:white;
+    cursor: pointer;
+}
+.shape-menu-size-label {
+    color:white;
+}
