--- a/client/src/css/panelButton.css
+++ b/client/src/css/panelButton.css
@@ -30,9 +30,10 @@
     font-size: 18px;
 }
 
-.panel-tooltip {
+.panel-tooltip-bottom {
     position: absolute;
-    left: 100%;
+    top: 100%;
+    left: 0;
     width: 200px;
     height: 50px;
     display: flex;
@@ -42,10 +43,10 @@
     color: black;
     font-size: 15px;
 }
-.panel-tooltip-bottom {
+
+.panel-tooltip-right {
     position: absolute;
-    top: 100%;
-    left: 0;
+    right: 50px;
     width: 200px;
     height: 50px;
     display: flex;
