--- a/client/src/css/panelButton.css
+++ b/client/src/css/panelButton.css
@@ -44,6 +44,20 @@
     font-size: 15px;
     z-index: 100;
 }
+.panel-tooltip-bottom-right {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 200px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(220,230,240);
+    color: black;
+    font-size: 15px;
+    z-index: 100;
+}
 
 .panel-tooltip-right {
     position: absolute;
