--- a/client/src/css/homePage.css
+++ b/client/src/css/homePage.css
@@ -1,5 +1,8 @@
 .homepage {
-    width: 100vw;
-    height: 100vh;
-    background-color: rgb(200,200,200)
+    background-color: rgb(200,200,200);
+}
+.homepage-body {
+    padding: 20px;
+    display: flex;
+    justify-content: center;
 }
