--- a/client/src/css/panelButton.css
+++ b/client/src/css/panelButton.css
@@ -47,7 +47,7 @@
 .panel-tooltip-bottom-right {
     position: absolute;
     top: 100%;
-    left: 0;
+    right: 0;
     width: 200px;
     height: 50px;
     display: flex;
